feat: Add URL to the Sky dataset

--- a/experiment-code.ipynb
+++ b/experiment-code.ipynb
@@ -31,7 +31,7 @@
     "tags": []
    },
    "source": [
-    "Before proceed this notebook, please make sure the `zip_file` and `data_path` variable in the below cell contains the path to the Sky dataset mentioned in the paper. The dataset is archived in the Supplementary Materials. "
+    "Before proceed this notebook, please make sure the `zip_file` and `data_path` variable in the below cell contains the path to the Sky dataset mentioned in the paper. The dataset can be downloaded at https://github.com/thienannguyen-cv/Sky-dataset. "
    ]
   },
   {
